# refarch-multich

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  README.md  iperf3_test.sh  remove_uhd.sh  setup_script.sh
.github/: ISSUE_TEMPLATE.md  pull_request_template.md
CogRF/: iperf3_test.sh
CogRF/labview/research/5785-stability-measurements/: 5785 Measurements.lvproj
CogRF/labview/research/radar-testbed-research/: CogRadarTestBed High Level Design.md  CogRadarTestBed Synchronization Feature.md  UHD Matlab Integration.md
CogRF/oss/: .gitignore
CogRF/oss/docs/: Austin System Design Documennt.md
CogRF/oss/master/host/examples/RFNoC_TXRX_Loopback/example/: CMakeLists.txt  rfnoc_txrx_loopback.cfg  rfnoc_txrx_loopback.cpp
CogRF/oss/master/tools/: setup_script.sh
CogRF/oss/tools/: dasplundtest_uhd.conf
RefDesign/: 01-network-manager-all.yaml  CMakeLists.txt
RefDesign/lib/: graphassembly.hpp  receivefunctions.cpp  recvtofile.hpp  replaycontrol.cpp  replaycontrol.hpp
Setup/: setup_script.sh
cmake/Modules/: FindFilesystem.cmake
cog-rf/: README.md
cog-rf/oss/master/: CMakeLists.txt
cog-rf/oss/master/host/examples/: CMakeLists.txt  init_usrp.cpp
cog-rf/oss/master/host/examples/C++/RFNoC_TXRX_Loopback/example/: a.out  rfnoc_txrx_loopback.cfg
cog-rf/oss/master/host/examples/C++/RFNoC_TXRX_Loopback/lib/: CMakeLists.txt  blocksettings.cpp  replaycontrol.cpp  replaycontrol.hpp  sync.cpp  sync.hpp
cog-rf/oss/master/host/examples/RFNoC_TXRX_Loopback/: CMakeLists.txt
cog-rf/oss/master/host/examples/RFNoC_TXRX_Loopback/example/: CMakeLists.txt  multitheadScratch.cpp  rfnoc_txrx_loopback.cpp  spsctest.cpp
cog-rf/oss/master/host/examples/RFNoC_TXRX_Loopback/lib/: blocksettings.hpp  graphassembly.cpp  receivefunctions.cpp  recvtofile.hpp  replaycontrol.cpp
cog-rf/oss/master/host/examples/python/: CMakeLists.txt  datreader.py  readDatFile.py
cog-rf/oss/tools/: clone_repo.sh  ubuntu-20.04-amd64.Dockerfile
config/: 01-network-manager-all.yaml  Configuration_Commands.txt  USRP_IP.txt  export_uhd_lib.sh  nicrb.sh  raid_config.sh  raid_setup.sh  samples.py  sfp1.network  sysctrl_config.sh  usrp_config.sh  usrp_config.txt  usrp_filesystem.sh  usrp_image_loader.sh  usrp_ip_config.sh  usrp_reboot.sh
docs/: 32_Channel_Template_layout_BOM_and_wiring.ods  32_Channel_Template_layout_BOM_and_wiring.xlsx  CMakeLists.txt  Doxyfile  Doxyfile.in
docs/Doxyfiles/: Documentation.html  Doxyfile.in  Dropped_Packets_Anlysis_RX.dox  mainpage.dox
examples/: Arch_dynamic_tx.cpp  Arch_iterative_loopback.cpp  Arch_multifreq_loopback.cpp  Arch_pipe.cpp  Arch_pipe_example.cpp  Arch_rfnoc_txrx_loopback copy.cpp  Arch_rfnoc_txrx_loopback.cpp  Arch_rfnoc_txrx_loopback_mem.cpp  Arch_rx_to_mem.cpp  Arch_txrx_fullduplex.cpp  Arch_txrx_fullduplex_dpdk.cpp  Arch_txrx_fullduplex_dpdk_mem.cpp  Arch_txrx_fullduplex_multifunc.cpp  RX_Only.cpp  iterative_loopback_singlethread.cpp  multicw_iterative.cpp  multifreq_loopback.cpp  rfnoc_txrx_loopback.cpp  rfnoc_txrx_loopback_mem.cpp  runconfig.cfg  testthis.cpp
examples/MATLAB/: pipeMatlab.m
host/: CMakeLists.txt
host/examples/: CMakeLists.txt  dat_to_buffer.cpp
host/examples/python/: CMakeLists.txt  readDatFile.py
host/examples/stand_alone_examples/: CMakeLists.txt  init_usrp.cpp  txrx_loopback_to_multifile_sync_looping.cpp
host/examples/tx_rx_to_file_multiusrp/: 4dev_txrx.cfg  CMakeLists.txt  main.cpp  main.hpp  testCfgFile.cpp
host/examples/tx_rx_to_file_multiusrp/lib/: CMakeLists.txt  applicationSettings.cpp  applicationSettings.hpp  checkClocks.cpp  checkClocks.hpp  config.hpp  createSession.cpp  createSession.hpp  detectChannels.cpp  detectChannels.hpp  playbackRecord.cpp  playbackRecord.hpp  programOptions.cpp  programOptions.hpp  usrpSettings.cpp  usrpSettings.hpp  waveTable.hpp
host/test/: CMakeLists.txt
lib/: ArchUSRP.cpp  ArchUSRP.hpp  CMakeLists.txt  FileSystem.cpp  FileSystem.hpp  RefArch.cpp  RefArch.hpp  blocksettings.cpp  blocksettings.hpp  graphassembly.cpp  graphassembly.hpp  multithread.hpp  receivefunctions.cpp  receivefunctions.hpp  recvdata.cpp  recvdata.hpp  recvtofile.cpp  recvtofile.hpp  replaycontrol.cpp  replaycontrol.hpp  structures.hpp  sync.cpp  sync.hpp
src/: rfnoc_txrx_loopback.cfg  rfnoc_txrx_loopback.cpp  rfnoc_txrx_loopback_singlethread.cpp  runconfig.cfg  singlestream.cpp  speedtest.cpp
tools/: Arch_analysis.py  Arch_analysis_test.py  nicPacketDrops.sh  readDatFile.py  samples_generator.py  setup_script.sh  softIRQ.sh  sysctl_config.sh
tools/PythonTesting/: Arch_test.py  tests.conf
tools/dat_analysis/: readDatFile.py  util.py
tools/dpdk/: create_symlinks_dpdkpmds.sh  dpdk_setup.txt  e800bindlinks.sh  e800resetlinks.sh  e800uhd.conf
tools/nic_config/: e800_config.txt  e800_netplan.yaml  nic_ring_buffers.sh
tools/oarer_dat_analysis/: IQdata.py  __init__.py  __main__.py  batch_run_benchmark_rate.py  demo_phase_over_time.py  demo_tone_measurement.py  parse_benchmark_rate.py  plots.py  readDatFile.py  refArch_rx_test.py  run_N3xx_max_rate_tests.py  run_arch.py  run_benchmark_rate.py  test.py  tone_measurement_module.py  usrpDat.py  util.py
tools/oarer_dat_analysis/Python FFT/: Single Tone Measurements - Custom.vi  main.py  methods.py  test.py  tone.py
tools/oarer_dat_analysis/Python FFT/Signals/: f=1000 fs=15000.csv  f=10000 fs=150000.csv  f=100000 fs=1500000.csv  f=11000 fs=165000.csv  f=12000 fs=180000.csv  f=13000 fs=195000.csv  f=14000 fs=210000.csv  f=15000 fs=225000.csv  f=16000 fs=240000.csv  f=17000 fs=255000.csv  f=18000 fs=270000.csv  f=19000 fs=285000.csv  f=2000 fs=30000.csv  f=20000 fs=300000.csv  f=21000 fs=315000.csv  f=22000 fs=330000.csv  f=23000 fs=345000.csv  f=24000 fs=360000.csv  f=25000 fs=375000.csv  f=26000 fs=390000.csv  f=27000 fs=405000.csv  f=28000 fs=420000.csv  f=29000 fs=435000.csv  f=3000 fs=45000.csv  f=30000 fs=450000.csv  f=31000 fs=465000.csv  f=32000 fs=480000.csv  f=33000 fs=495000.csv  f=34000 fs=510000.csv  f=35000 fs=525000.csv  f=36000 fs=540000.csv  f=37000 fs=555000.csv  f=38000 fs=570000.csv  f=39000 fs=585000.csv  f=4000 fs=60000.csv  (+65 more)
(+530 files in other folders)
